--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" src="https://cdn-proxy.hoststudios.de/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AusbauSchmidt</title>
+    <title>Host Gamestudios</title>
   </head>
   <body>
     <div id="app"></div>
