--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
-    <<link rel="icon" type="image/x-icon" href="https://cdn-proxy.hoststudios.de/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://cdn-proxy.hoststudios.de/img/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Host Gamestudios</title>
   </head>
